# beeai-platform

./: .aiignore  .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  agent-registry.yaml  mise.toml  pnpm-lock.yaml  pnpm-workspace.yaml  provider-registry.yaml  pyproject.toml  tasks.toml
agents/a2a-ui-test/chat/: pyproject.toml
agents/a2a-ui-test/chat/src/chat/: __main__.py  agent.py
agents/community/aider/: README.md  agent.yaml  pyproject.toml
agents/community/aider-agent/: beeai-provider.yaml  pyproject.toml
agents/community/aider-agent/src/: sitecustomize.py
agents/community/aider-agent/src/aider_agent/: agent.py
agents/community/aider/src/: sitecustomize.py
agents/community/aider/src/aider_agent/: agent.py
agents/community/autogen-agents/: beeai-provider.yaml  pyproject.toml
agents/community/autogen-agents/src/autogen_agents/: configuration.py  server.py
agents/community/business-case-assistant/: .dockerignore  Dockerfile  README.md  pyproject.toml
agents/community/business-case-assistant/src/business_case_assistant/: agent.py  configuration.py  graph.py  langgraph.json  nodes.py
agents/community/crewai-agents/: Dockerfile  beeai-provider.yaml  pyproject.toml
agents/community/crewai-agents/src/crewai_agents/: __init__.py  configuration.py  server.py
agents/community/gpt-researcher/: .env  Dockerfile  README.md  agent.yaml  gpt_researcher_agent.py  pyproject.toml
agents/community/gpt-researcher-agent/: README.md  beeai-provider.yaml  pyproject.toml
agents/community/gpt-researcher-agent/gpt_researcher_agent/: agent.py  configuration.py
agents/community/gpt-researcher/gpt_researcher_agent/: agent.py
agents/community/literature-review/: Dockerfile  agent.yaml  pyproject.toml
agents/community/literature-review/src/literature-review/: README.md  server.py
agents/community/literature-review/src/literature_review/: agent.py  server.py  team.py
agents/community/marketing-strategy/: agent.yaml  pyproject.toml
agents/community/marketing-strategy/src/marketing_strategy/: README.md  agent.py  configuration.py  crew.py  server.py
agents/community/ollama-deep-researcher/: Dockerfile  README.md  agent.yaml  pyproject.toml
agents/community/ollama-deep-researcher/src/ollama_deep_researcher/: agent.py  configuration.py  graph.py  prompts.py  server.py  state.py  utils.py
agents/community/ollama-deep-reserarcher/: agent.yaml  pyproject.toml
agents/community/ollama-deep-reserarcher/src/ollama_deep_researcher/: configuration.py  server.py
agents/community/open-deep-research-agent/: README.md  agent.yaml  beeai-provider.yaml  pyproject.toml
agents/community/open-deep-research-agent/open_deep_research_agent/: server.py
agents/community/open-deep-research-agent/open_deep_research_agent/scripts/: cookies.py  gaia_scorer.py  mdconvert.py  reformulator.py  run_agents.py  text_inspector_tool.py  text_web_browser.py  visual_qa.py
agents/official/beeai-framework/agent-docs-creator/: pyproject.toml
agents/official/beeai-framework/chat/: README.md  agent.yaml  pyproject.toml  tsconfig.json
agents/official/beeai-framework/chat/src/: chat.ts  server.ts
agents/official/beeai-framework/podcast-creator/: README.md  agent.yaml  package-lock.json  package.json  pyproject.toml
agents/official/beeai-framework/podcast-creator/src/: config.ts  podcast-creator.ts  server.ts
agents/official/composition/: beeai-provider.yaml  pyproject.toml
agents/official/composition/src/composition/: configuration.py  linear_workflow.py  prompted_sequential_workflow.py  sequential_workflow.py  server.py  utils.py
agents/official/sequential-workflow/: agent.yaml  beeai-provider.yaml  pyproject.toml
agents/official/sequential-workflow/src/sequential_workflow/: __init__.py  agent.py  server.py
apps/beeai-cli/: README.md  pyproject.toml  tasks.toml
apps/beeai-cli/data/: lima-vm.yaml
apps/beeai-cli/src/beeai_cli/: __init__.py  api.py  async_typer.py  configuration.py  console.py  utils.py
apps/beeai-cli/src/beeai_cli/commands/: agent.py  build.py  compose.py  env.py  platform.py  provider.py  server.py  telemetry.py  tool.py
apps/beeai-sdk/: README.md  pyproject.toml  tasks.toml
apps/beeai-sdk/examples/: agent.py  cli.py
apps/beeai-sdk/examples/agents/: pure-a2a.py
apps/beeai-sdk/src/beeai_sdk/: __init__.py
apps/beeai-sdk/src/beeai_sdk/a2a_extensions/: __init__.py  base_extension.py
apps/beeai-server/: .gitignore  Dockerfile  README.md  docker-compose.yaml  index.html  pyproject.toml  tasks.toml  template.env
apps/beeai-server/scripts/: bootstrap_dev.sh
apps/beeai-server/src/beeai_server/: __init__.py  application.py  bootstrap.py  configuration.py  custom_types.py  exceptions.py  logging_config.py  run_workers.py  schema.py  telemetry.py
apps/beeai-server/src/beeai_server/adapters/: docker.py  filesystem.py  interface.py
apps/beeai-server/src/beeai_server/api/: auth.py  dependencies.py
apps/beeai-server/src/beeai_server/crons/: auto_remove_providers.py  cleanup_old_requests.py  reload_external_changes.py  reload_provider_container.py  remove_broken_unmanaged_providers.py  scale_down_providers.py  sync_registry_providers.py
apps/beeai-server/src/beeai_server/domain/: constants.py  model.py  provider.py  registry.py  telemetry.py
apps/beeai-server/src/beeai_server/jobs/: procrastinate.py
apps/beeai-server/src/beeai_server/routes/: acp.py  agent.py  dependencies.py  env.py  mcp_sse.py  provider.py  telemetry.py  ui.py
apps/beeai-server/src/beeai_server/service_layer/: deployment_manager.py  unit_of_work.py
apps/beeai-server/src/beeai_server/services/: acp.py  env.py  provider.py  telemetry.py  unit_of_work.py
apps/beeai-server/src/beeai_server/utils/: docker.py  fastapi.py  github.py  id.py  logs_container.py  managed_server_client.py  managed_telemetry_collector.py  periodic.py  process.py  utils.py
apps/beeai-server/tests/: conftest.py
apps/beeai-server/tests/e2e/: conftest.py  test_agent_starts.py
apps/beeai-server/tests/integration/: conftest.py
(+1142 files in other folders)
