[project]
name = "beeai-cli"
version = "0.1.4"
description = "BeeAI CLI"
readme = "README.md"
authors = [{ name = "IBM Corp." }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "beeai-server==0.1.4",
    "anyio>=4.8.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
    "jsonschema>=4.23.0",
    "jsf>=0.11.2",
    "gnureadline>=8.2.13",
    "prompt-toolkit>=3.0.50",
    "cachetools>=5.5.2",
    "jsonref>=1.1.0",
    "inquirerpy>=0.3.4",
    "psutil>=7.0.0",
    "acp-sdk>=0.8.1",
    "tenacity>=9.1.2",
    "kr8s>=0.20.7",
]

[tool.uv.sources]
beeai-server = { workspace = true }
beeai-sdk = { workspace = true }

[project.scripts]
beeai = "beeai_cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
