[project]
name = "beeai-cli"
version = "0.2.15-rc3"
description = "BeeAI CLI"
readme = "README.md"
authors = [{ name = "IBM Corp." }]
requires-python = ">=3.13,<4.0"
dependencies = [
    "anyio~=4.9.0",
    "pydantic~=2.11.7",
    "pydantic-settings~=2.10.1",
    "requests~=2.32.4",
    "jsonschema~=4.24.0",
    "jsf~=0.11.2",
    'gnureadline~=8.2.13; sys_platform != "win32"',
    "prompt-toolkit~=3.0.51",
    "jsonref~=1.1.0",
    "inquirerpy~=0.3.4",
    "psutil~=7.0.0",
    "acp-sdk~=1.0.0",
    "tenacity~=9.1.2",
    "typer~=0.16.0",
]

[tool.uv.sources]
beeai-server = { workspace = true }
beeai-sdk = { workspace = true }

[project.scripts]
beeai = "beeai_cli:app"
beeai-cli = "beeai_cli:app"

[build-system]
requires = ["uv_build>=0.7.12,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = ["src/beeai_cli/data"]
