[build-system]
  build-backend = 'hatchling.build'
  requires = ['hatchling']

[dependency-groups]
  dev = ['pytest>=8.3.4', 'pytest-asyncio>=0.25.3', 'pytest-env>=1.1.5', 'pytest-httpx>=0.35.0', 'pytest-subtests>=0.14.1', 'reportlab>=4.4.2']

[project]
  dependencies = ['acp-sdk>=1.0.0', 'aiohttp>=3.11.11', 'anyio>=4.9.0', 'asgiref>=3.8.1', 'fastapi[standard]>=0.115.7', 'httpx>=0.28.1', 'kink>=0.8.1', 'orjson>=3.10.15', 'pydantic>=2.10.6', 'pydantic-settings>=2.7.1', 'structlog>=25.1.0', 'uvicorn>=0.34.0', 'opentelemetry-sdk>=1.30.0', 'opentelemetry-api>=1.30.0', 'opentelemetry-exporter-otlp-proto-http>=1.30.0', 'aiodocker>=0.24.0', 'tenacity>=9.0.0', 'cachetools>=5.5.2', 'python-multipart>=0.0.20', 'kr8s>=0.20.7', 'beeai-framework~=0.1.29', 'alembic>=1.15.2', 'asyncpg>=0.30.0', 'sqlalchemy[asyncio]>=2.0.41', 'aioboto3>=14.3.0', 'pyjwt>=2.10.1', 'procrastinate==3.2.2', 'sqlparse>=0.5.3', 'pgvector>=0.4.1', 'ibm-watsonx-ai>=1.3.28']
  description = 'BeeAI server'
  name = 'beeai-server'
  readme = 'README.md'
  requires-python = '>=3.13,<4.0'
  version = '0.2.15-rc4'

  [[project.authors]]
    name = 'IBM Corp.'

  [project.scripts]
    beeai-server = 'beeai_server:serve'
    create-buckets = 'beeai_server:create_buckets'
    create-vector-extension = 'beeai_server:create_vector_extension'
    migrate = 'beeai_server:migrate'

[tool]
  [tool.hatch]
    [tool.hatch.build]
      [tool.hatch.build.targets]
        [tool.hatch.build.targets.wheel]
          artifacts = ['static/']

  [tool.pytest]
    [tool.pytest.ini_options]
      addopts = '-v --strict-markers'
      asyncio_default_fixture_loop_scope = 'function'
      env = ['PERSISTENCE__ENCRYPTION_KEY=3YwblH4IiFObl0igcHFqd-9BxV7csrrCrunaVotMda8=', 'AUTH__DISABLE_AUTH=true']
      markers = ['e2e', 'unit', 'integration']

  [tool.ruff]
    line-length = 120
