[project]
name = "aider-agent"
version = "0.1.0"
description = "A code-writing agent using Aider as a Python library"
authors = [{ name = "IBM Corp." }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "acp-sdk==0.0.4",
    "aider-chat>=0.18.1",
    "beeai-sdk==0.0.5",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.6",
    "google-generativeai>=0.8.4",
]

[project.scripts]
aider-agent = "aider_agent.agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aider_agent"]

[tool.uv.sources]
beeai-sdk = { path = "../../../packages/beeai-sdk", editable = true }
