[project]
name = "business-case-assistant"
version = "0.1.1"
description = "Business case writer using LangGraph"
readme = "README.md"
authors = [{ name = "IBM Corp." }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "acp-sdk>=0.8.1",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.63",
    "langchain-openai>=0.3.19",
    "langgraph>=0.4.8",
    "langgraph-api>=0.2.44",
    "langgraph-cli>=0.2.12",
    "pyyaml>=6.0.2",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[project.scripts]
server = "business_case_assistant.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
