[project]
name = "crewai_agents"
version = "0.0.1"
description = "Collection of CrewAI agents"
authors = []
requires-python = ">=3.11,<4.0"
dependencies = [
    "beeai-sdk==0.0.11",
    "acp-sdk", # version determined by beeai-sdk
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
crewai-agents = "crewai_agents.server:main"

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
