[project]
name = "gpt-researcher-agent"
version = "0.1.0"
description = ""
authors = [
    { name = "Lukáš Janeček", email = "xjacka@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "agentcommunicationprotocol (>=0.0.5)",
    "gpt-researcher (>=0.10.11,<0.11.0)",
    "duckduckgo-search (>=7.3.2,<8.0.0)",
    "beeai-sdk",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.6",
]

[project.scripts]
gpt-researcher-agent = "gpt_researcher_agent.agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
beeai-sdk = { path = "../../../packages/beeai-sdk", editable = true }
