[project]
name = "gpt-researcher-agent"
version = "0.1.0"
description = ""
authors = [{ name = "IBM Corp." }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "beeai-sdk==0.0.11",
    "acp-sdk", # version determined by beeai-sdk
    "gpt-researcher>=0.10.11,<0.11.0",
    "duckduckgo-search>=7.3.2,<8.0.0",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.6",
]

[project.scripts]
gpt-researcher-agent = "gpt_researcher_agent.agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
