[project]
name = "gpt-researcher-agent"
version = "0.1.0"
description = ""
authors = [{ name = "IBM Corp." }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "acp-sdk>=0.7.0",
    "gpt-researcher>=0.10.11,<0.11.0",
    "duckduckgo-search~=7.5.5"
]

[project.scripts]
server = "gpt_researcher_agent.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
