[project]
name = "gpt-researcher-agent"
version = "0.1.0"
description = ""
authors = [
    { name = "IBM Corp." },
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "acp-sdk==1.0.0",
    "gpt-researcher>=0.10.11,<0.11.0",
    "duckduckgo-search~=7.5.5",
    "pydantic-settings>=2.7.1",
    "pydantic==2.10.6",
    "openinference-instrumentation-openai>=0.1.22",
]

[project.scripts]
server = "gpt_researcher_agent.agent:run"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
override-dependencies = [
    "pydantic==2.10.6",
]
