[project]
name = "literature-review"
version = "0.0.1"
description = "Collection of autogen agents"
readme = "README.md"
authors = []
requires-python = ">=3.11,<4.0"
dependencies = [
    "arxiv>=2.1.3",
    "autogen-agentchat>=0.4.7",
    "autogen-ext[openai]>=0.4.7",
    "beeai-sdk==0.0.17",
    "bs4>=0.0.2",
]

[project.scripts]
server = "literature_review.server:server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
