[project]
name = "literature-review"
version = "0.1.0"
description = "Collection of autogen agents"
authors = [
    { name = "IBM Corp." },
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "acp-sdk==0.12.1",
    "arxiv>=2.1.3",
    "autogen-agentchat>=0.4.7",
    "autogen-ext[openai]>=0.4.7",
    "bs4>=0.0.2",
]

[project.scripts]
server = "literature_review.agent:run"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
