[project]
name = "marketing-strategy"
version = "0.0.1"
description = "Collection of CrewAI agents"
authors = []
requires-python = ">=3.11,<3.12"
dependencies = [
    "acp-sdk==0.12.0",
    "crewai[tools]>=0.102.0,<1.0.0",
    "databricks-sdk>=0.46.0",
    "openinference-instrumentation-crewai>=0.1.7",
]

[project.scripts]
server = "marketing_strategy.agent:run"

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
