[project]
name = "ollama-deep-researcher"
version = "0.0.1"
description = "Lightweight web research and summarization assistant."
authors = [{ name = "Lance Martin" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "acp-sdk==0.12.0",
    "langgraph>=0.2.55",
    "langchain-community>=0.3.9",
    "tavily-python>=0.5.0",
    "langchain-ollama>=0.2.1",
    "duckduckgo-search~=7.5.5",
    "beautifulsoup4>=4.13.3",
    "langchain-openai>=0.3.7",
    "openinference-instrumentation-langchain>=0.1.36",
    "pydantic-settings>=2.8.1",
]

[project.scripts]
server = "ollama_deep_researcher.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
