[project]
name = "composition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "IBM Corp." }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "acp-sdk==0.0.3",
    "beeai-sdk==0.0.5",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.6",
]

[project.scripts]
composition-agent = "composition.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
beeai-sdk = { path = "../../../packages/beeai-sdk", editable = true }
