[project]
name = "sequential-workflow"
version = "0.1.0"
authors = [{ name = "IBM Corp." }]
requires-python = ">=3.11,<3.12"
dependencies = ["acp-sdk==0.12.0", "pyyaml>=6.0.2"]

[project.scripts]
server = "sequential_workflow.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
