[project]
name = "agent-docs-creator"
version = "0.1.0"
authors = [{ name = "IBM Corp." }]
requires-python = ">=3.11,<3.12"
dependencies = [
    "acp-sdk>=0.6.0",
    "beeai-framework>=0.1.18",
    "pydantic-settings>=2.9.0",
]

[project.scripts]
server = "agent_docs_creator.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
