[project]
name = "agent-docs-creator"
version = "0.1.0"
authors = [
    { name = "IBM Corp." },
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "acp-sdk==0.12.3",
    "beeai-framework~=0.1.29",
    "openinference-instrumentation-beeai>=0.1.5",
    "pydantic-settings>=2.9.0",
]

[project.scripts]
server = "agent_docs_creator.agent:run"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
