[project]
name = "chat"
version = "0.1.0"
description = "AI-powered conversational system with memory and tools."
authors = [{ name = "IBM Corp." }]
requires-python = ">=3.11,<3.12"
dependencies = [
    "acp-sdk==0.12.0",
    "beeai-framework[duckduckgo,wikipedia]==0.1.18",
    "openinference-instrumentation-beeai>=0.1.5",
    "pydantic-settings>=2.9.0",
]

[project.scripts]
server = "chat.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
