[project]
name = "podcast-creator"
version = "0.1.0"
description = "The agent creates structured podcast-style dialogues optimized for AI-driven text-to-speech (TTS)."
authors = [
    { name = "IBM Corp." },
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "acp-sdk==0.12.3",
    "beeai-framework~=0.1.29",
    "openinference-instrumentation-beeai>=0.1.6",
    "pydantic-settings>=2.9.0",
]

[project.scripts]
server = "podcast_creator.agent:run"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
